# Python_for_Lifescience

./: .gitignore  Chapter_1_Foundation.ipynb  Chapter_1_Foundation_ko.ipynb  Chapter_2:Control_Structures.ipynb  Chapter_2:Control_Structures_ko.ipynb  Chapter_2_Control_Structures.ipynb  Chapter_2_Control_Structures_ko.ipynb  Chapter_3:Data_Structures_for_Biology.ipynb  Chapter_3:Data_Structures_for_Biology_ko.ipynb  Chapter_3_Data_Structures_for_Biology.ipynb  Chapter_3_Data_Structures_for_Biology_ko.ipynb  Chapter_4_Working_with_files.ipynb  Chapter_4_Working_with_files_ko.ipynb  Chapter_5:NumPy_for_Numerical_Data.ipynb  Chapter_5:NumPy_for_Numerical_Data_ko.ipynb  Chapter_5_NumPy_for_Numerical_Data.ipynb  Chapter_5_NumPy_for_Numerical_Data_ko.ipynb  Chapter_6:Pandas_for_Data_Analysis.ipynb  Chapter_6:Pandas_for_Data_Analysis_ko.ipynb  Chapter_6_Pandas_for_Data_Analysis.ipynb  Chapter_6_Pandas_for_Data_Analysis_ko.ipynb  Chapter_7:Data_Visualization.ipynb  Chapter_7:Data_Visualization_ko.ipynb  Chapter_7:Pandas_for_Data_Analysis.ipynb  Chapter_7_Data_Visualization.ipynb  Chapter_7_Data_Visualization_ko.ipynb  Chapter_8:Statistical_Analysis_for_Biology_ko.ipynb  Chapter_8_Statistical_Analysis_for_Biology.ipynb  Chapter_8_Statistical_Analysis_for_Biology_ko.ipynb  README.md  README_ko.md  pyproject.toml
data/experiments/: experimental_data.csv  gene_expression.csv
data/sequences/: gene1.fasta  gene2.fasta  gene3.fasta  quality_check.fasta  sample_dna.txt  sample_sequences.fasta
results/: batch_analysis.txt  sequence_analysis.txt  treatment_summary.csv
