[project]
name = "python-for-lifescience"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
